updated the email link to be a button, and refactored the color of certain items on the dom

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p>
             I'm always interested in hearing about new software engineering opportunities, web development projects, or any interesting developments in the world of coding.
           </p>
-          <p><a href="mailto:john.d.maybee@gmail.com">Email me</a></p>
+          <p><a href="mailto:john.d.maybee@gmail.com" class="button">Email me</a></p>
         </section>
       </div>
       <footer>
