created a div to hold a gradient class and entered styling for said class

--- a/index.html
+++ b/index.html
@@ -46,16 +46,15 @@
         <p>Currently, I'm working at <a href="https://buildlabs.io/" target="_blank">Build Labs</a> as a contract software development reviewer as I'm making a career switch from medical billing and accouting to software engineering. </p>
         <p>At this time, I'm seeking further employment as a frontend or full stack developer.</p>
     </section>
-      
+    <div class="gradient"></div>
     <div class="section">
         <section id="contact">
             <h2>Contact me</h2>
-            <p>
-            I'm always interested in hearing about new software engineering opportunities, web development projects, or any interesting developments in the world of coding.
-            </p>
+            <p>I'm always interested in hearing about new software engineering opportunities, web development projects, or any interesting developments in the world of coding.</p>
             <p><a href="mailto:john.d.maybee@gmail.com" class="button">Email me</a></p>
         </section>
     </div>
+    <div class="gradient"></div>
     <footer>
         <h2>John Maybee &middot; Software Developer</h2>
         <ul>
