--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li>
             <h1>
               <a href="index.html">
-                <span class="fa-solid fa-code-branch"></span>
+                <span class="fa-solid fa-code-branch" aria-hidden="true"></span>
                 John Maybee
               </a>
             </h1>
@@ -46,6 +46,63 @@
         <p>Currently, I'm working at <a href="https://buildlabs.io/" target="_blank">Build Labs</a> as a contract software development reviewer as I'm making a career switch from medical billing and accouting to software engineering. </p>
         <p>At this time, I'm seeking further employment as a frontend or full stack developer.</p>
     </section>
+    <div class="gradient"></div>
+    <div class="section-conceal">
+        <section id="projects">
+          <h2>Projects I'm proud of</h2>
+          <article>
+            <div class="text">
+              <h4>Latest Project</h4>
+              <h3>Wall of Wonder</h3>
+              <p class="blackbox">Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere in the description. A link looks like <a href="https://frontendmasters.github.io/grid-flexbox-v2/">this</a>, and multiple links look <a href="#">like this</a> and <a href="#">like this</a>.</p>
+              <h4>Technologies used include:</h4>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>SVG</li>
+              </ul>
+            </div>
+            <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png" alt="Screenshot of the Wall of Wonder." />
+          </article>
+          <article class="reverse">
+            <div class="text">
+              <h4>Bootcamp Project</h4>
+              <h3>Feed-A-Star-Mole Game</h3>
+              <p class="blackbox">
+                Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere
+                in the description. A link looks like
+                <a href="https://frontendmasters.github.io/bootcamp/mole">this</a>, and multiple links look <a href="#">like this</a> and
+                <a href="#">like this</a>.
+              </p>
+              <h4>Technologies used include:</h4>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+              </ul>
+            </div>
+            <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-5.png" alt="Screenshot of the Frontend Masters Bootcamp." />
+          </article>
+          <article>
+            <div class="text">
+              <h4>Photography Project</h4>
+              <h3>Wall of Wonder Collection</h3>
+              <p class="blackbox">
+                Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere
+                in the description. A link looks like
+                <a href="https://frontendmasters.github.io/grid-flexbox-v2/grid-figure-figcaption">this</a>, and multiple links look <a href="#">like this</a> and
+                <a href="#">like this</a>.
+              </p>
+              <h4>Technologies used include:</h4>
+              <ul>
+                <li>HTML</li>
+                <li>CSS Grid</li>
+              </ul>
+            </div>
+              <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-4.png" alt="Screenshot of the Wall of Wonder Collections." />
+          </article>
+        </section>
+    </div>
     <div class="gradient"></div>
     <div class="section">
         <section id="contact">
