--- a/about.html
+++ b/about.html
@@ -45,11 +45,8 @@
           <div class="text">
             <h3>Just the highlights</h3>
             <p class="blackbox">
-              Description of the project. This should be fairly concise while
-              also describing the key components that you developed or worked
-              on. It can be as long as you need it to be but should at least be
-              a few sentences long. Be sure to include specific links anywhere
-              in the description. A link looks like
+                Description. Description. Description. Description. Description. Description. Description. Description. Description. Description. Description. Description. 
+                A link looks like
               <a href="https://frontendmasters.github.io/grid-flexbox-v2/"
                 >this</a
               >, and multiple links look <a href="#">like this</a> and
