--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
               <h4>Bootcamp Project</h4>
               <h3>Feed-A-Star-Mole Game</h3>
               <p class="blackbox">
-                Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere
-                in the description. A link looks like
+                Description. Description. Description. Description. Description. Description. Description. Description. Description. Description. Description. Description. 
+                A link looks like
                 <a href="https://frontendmasters.github.io/bootcamp/mole">this</a>, and multiple links look <a href="#">like this</a> and
                 <a href="#">like this</a>.
               </p>
@@ -88,8 +88,8 @@
               <h4>Photography Project</h4>
               <h3>Wall of Wonder Collection</h3>
               <p class="blackbox">
-                Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere
-                in the description. A link looks like
+                Description. Description. Description. Description. Description. Description. Description. Description. Description. Description. Description. Description. 
+                A link looks like
                 <a href="https://frontendmasters.github.io/grid-flexbox-v2/grid-figure-figcaption">this</a>, and multiple links look <a href="#">like this</a> and
                 <a href="#">like this</a>.
               </p>
