corrected the button links on the about.html

--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
               </a>
             </h1>
           </li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="index.html#projects">Projects</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="https://www.linkedin.com/in/john-d-maybee//" target="_blank">
+          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="https://www.linkedin.com/in/john-d-maybee/" target="_blank">
             <span class="fa-brands fa-linkedin" aria-hidden="true"></span>
             <span class="sr-only">LinkedIn</span>
            </a>
