--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Playfair+Display&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>John Maybee's CSS Portfolio Website</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
             <span class="sr-only">Github<span>
            </a>
           </li>
-          <li><a href="https://docs.google.com/document/d/1qkkafUKsDeeOftLImxXUNycmCfqZHXP2vlTfc4Gl3F0/" target="_blank" class="button">Resumé</a></li>
+          <li><a href="https://docs.google.com/document/d/1FJQ3nbmruXAv85SkapfPnPMcZgl7rH1e0Z4O553isfM" target="_blank" class="button">Resumé</a></li>
         </ul>
     </nav>
     <section id="intro">
